Added historic CO2 page

--- a/styles.css
+++ b/styles.css
@@ -87,3 +87,5 @@ and (max-device-width: 480px) {
 and (max-device-width: 480px) {
   .mobileShow { display: inline; }
 }
+
+/* dygraphs partial transparency */
