--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,8 @@
 <!-- font awesome icon library -->
-<script src="http://use.fontawesome.com/4e14d22100.js"></script>
+<script src="https://use.fontawesome.com/4e14d22100.js"></script>
 
 <!-- fonts -->
-<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
 
 <!-- disable browser caching -->
